adding events: bbckground blend effect, bcgkround color, input url image & modify html blend name effects

--- a/style/index.css
+++ b/style/index.css
@@ -176,6 +176,7 @@ main .meme-container {
 
 .img-meme {
     background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     flex-grow: 1;
 }
