--- a/style/index.css
+++ b/style/index.css
@@ -174,6 +174,7 @@ main .meme-container {
 
 .img-meme {
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     width: 100%;
     flex-grow: 1;
